@@ -6,7 +6,7 @@
     <description>Builds the module suite Autopsy 4.</description>
 	
     <import file="nbproject/build-impl.xml"/>
-    
+    <import file="${basedir}/TSKVersion.xml"/>
     <!-- IMPORTANT: nbproject/platform.properties has a netbeans-plat-version property that MUST be kept in sync (manually) -->
     <property name="netbeans-plat-version" value="8.2" />
     <property name="nbplatform.active.dir" value="${basedir}/netbeans-plat/${netbeans-plat-version}" />
@@ -79,6 +79,10 @@
         <delete dir="${zip-tmp}"/>
         <mkdir dir="${zip-tmp}"/>
         <unzip src="${nbdist.dir}/${app.name}.zip" dest="${zip-tmp}"/>
+        
+        <!-- Disable the Experimental module by default for the installed version.  Need to update .lastModified time for change to be seen. -->
+        <replace file="${zip-tmp}/autopsy/autopsy/config/Modules/org-sleuthkit-autopsy-experimental.xml" token="&lt;param name=&quot;enabled&quot;&gt;true&lt;/param&gt;" value="&lt;param name=&quot;enabled&quot;&gt;false&lt;/param&gt;"/>
+        <echo file="${zip-tmp}/autopsy/autopsy/.lastModified" message="" />
 
         <!-- step (3) do your copying stuff here, check the ant doc for copy, move, etc file -->
         <copy file="${nbplatform.active.dir}/platform/modules/ext/junit-4.10.jar"
@@ -87,7 +91,20 @@
         <copy file="${basedir}/LICENSE-2.0.txt" tofile="${zip-tmp}/${app.name}/LICENSE-2.0.txt"/>
         <copy file="${basedir}/NEWS.txt" tofile="${zip-tmp}/${app.name}/NEWS.txt"/>
         <copy file="${basedir}/KNOWN_ISSUES.txt" tofile="${zip-tmp}/${app.name}/KNOWN_ISSUES.txt"/>
-        <unzip src="${thirdparty.dir}/gstreamer/${os.family}/i386/0.10.7/gstreamer.zip" dest="${zip-tmp}/${app.name}/gstreamer"/>
+        <if>
+            <equals arg1="${os.family}" arg2="unix"/>
+            <then>
+                <copy file="${basedir}/unix_setup.sh" tofile="${zip-tmp}/${app.name}/unix_setup.sh"/>
+                <replaceregexp file="${zip-tmp}/${app.name}/unix_setup.sh" match="TSK_VERSION=(.*)" replace="TSK_VERSION=${TSK_VERSION}" byline="true"/>
+            </then>
+        </if>
+        <if>
+            <equals arg1="${os.family}" arg2="windows"/>
+            <then>
+                <unzip src="${thirdparty.dir}/gstreamer/${os.family}/i386/0.10.7/gstreamer.zip" dest="${zip-tmp}/${app.name}/gstreamer"/>
+            </then>
+        </if>
+        
         <copy file="${basedir}/icons/icon.ico" tofile="${zip-tmp}/${app.name}/icon.ico" overwrite="true"/>
         
         <!-- Copy the Autopsy documentation to the docs folder -->
@@ -96,6 +113,7 @@
         </copy>
 
         <property name="app.property.file" value="${zip-tmp}/${app.name}/etc/${app.name}.conf" />
+        <var name="jvm-value" value="--branding ${app.name} -J-Xms24m -J-Xmx4G -J-Xverify:none -J-XX:+UseG1GC -J-XX:+UseStringDeduplication"/>
         <!-- for Japanese localized version add option:  -Duser.language=ja -->
         
             
@@ -279,10 +297,6 @@
     <target name="build-installer" depends="getProps, doxygen, build-zip" description="Builds Autopsy installer.">
         <delete dir="${nbdist.dir}/${app.name}-installer" quiet="true"/>
         <unzip src="${nbdist.dir}/${app.name}-${app.version}.zip" dest="${nbdist.dir}/${app.name}-installer"/>
-	    
-        <!-- Disable the Experimental module by default for the installed version.  Need to update .lastModified time for change to be seen. -->
-        <replace file="${nbdist.dir}/${app.name}-installer/autopsy/config/modules/org-sleuthkit-autopsy-experimental.xml" token="&lt;param name=&quot;enabled&quot;&gt;true&lt;/param&gt;" value="&lt;param name=&quot;enabled&quot;&gt;false&lt;/param&gt;"/>
-        <echo file="${nbdist.dir}/${app.name}-installer/autopsy/.lastModified" message="" />
         
         <antcall target="build-installer-${os.family}" />
     </target>
